fix overflow-x issue on mobile

--- a/styles/css/App.scss
+++ b/styles/css/App.scss
@@ -54,7 +54,7 @@ body.dark {
   background-color: var(--background-color);
 }
 
-html {
+html, body {
   scroll-behavior: smooth;
   overflow: scroll;
   scrollbar-width: none;
@@ -516,7 +516,8 @@ nav {
     align-items: top;
     flex-direction: column;
     margin: 0 0 5em 0;
-    width: calc(clamp(350px, 100%, 1300px));
+    width: calc(clamp(250px, 100%, 1300px));
+    border: 1px solid white;
     .fact {
       display: flex;
       justify-content: center;
@@ -524,8 +525,7 @@ nav {
       flex-direction: column;
       width:100%;
       height: 100%;
-
-      margin: 0 2em;
+      border: 1px solid white;
       text-align: center;
       padding: 0.5em;
       h4 {
